--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,16 @@
-# Space Station 13 Git Ignore
+# RootBeer Git Ignore
 
 # Build Files
-Build/
-
-# Temp Files
+Binaries/
 Temp/
 
-# Dependency Source Files
-Dependencies/Sources/
-
-# Documents
-Documents/
-
-# Misc Files
+# Visual Studio Specific Files
+.vs/
 *.sdf
 *.opensdf
 *.opendb
+*.VC.db
+*.VC.VC.opendb
 
 # User-specific files
 *.suo
