--- a/Targets/VS2017/Engine.vcxproj
+++ b/Targets/VS2017/Engine.vcxproj
@@ -10,9 +10,19 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\Source\Engine\Main.cpp" />
+    <ClCompile Include="..\..\Source\Engine\Platform\Windows\WindowWin32.cpp" />
+    <ClCompile Include="..\..\Source\Engine\Window.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Source\Engine\Engine.h" />
+    <ClInclude Include="..\..\Source\Engine\Platform\Windows\WindowWin32.h" />
+    <ClInclude Include="..\..\Source\Engine\Window.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{6D43FF61-9770-45E4-8373-6EB81DB6EEDB}</ProjectGuid>
+    <ProjectGuid>{5C4FD200-7457-424D-8579-807EEED8D7FB}</ProjectGuid>
     <RootNamespace>RendererGL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -60,6 +70,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>PLATFORM_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -69,6 +80,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>PLATFORM_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
